# scosa

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  notes.txt  regenerate
.github/workflows/: pluginbuild.yml
compositions/1312-symphony/: main.scd  test-1.scd  test-2.scd
compositions/unremitting-transfer/: main.scd
include/: JustoEngine.hpp
plugins/EuCosa/: EuCosa.cpp  EuCosa.hpp  EuCosa.sc  EuCosa.schelp
plugins/Justo/: Justo.cpp  Justo.hpp  Justo.sc  Justo.schelp
plugins/TrigGate/: TrigGate.cpp  TrigGate.hpp  TrigGate.sc
src/: JustoEngine.cpp
system/clocks/: base.scd  eucosa.scd
system/voices/: 808.scd
tests/: TestJustoEngine.cpp  test_justo_engine.cpp
